# CMS

./: cognito-template.yaml  docker-compose.yml
backend/: Dockerfile  create_superuser.py  entrypoint.sh  pyproject.toml
backend/backend/: settings.py  urls.py  utils.py  views.py
backend/backend/middleware/: cognito.py  decorators.py
backend/cms_app/templates/cms_app/: base.html  bootstrap5.html  home.html
